force-app/main/default/objects/LLC_BI__Spread_Projections_Driver__c/fields/LLC_BI__Spread_Statement_Record__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>This optional lookup field looks up to the Spreads Statement Record object and allows administrators to override classifications with spreads statement records.</description>
    <label>Spread Statement Record</label>
    <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Spread_Projections_Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>