force-app/main/default/objects/LLC_BI__Spread_Projections_Driver__c/fields/LLC_BI__Spread_Statement_Record_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Record_Value__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>This optional lookup field looks up to the Spreads Statement Record Value object.</description>
    <label>Spread Statement Record Value</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Value__c</referenceTo>
    <relationshipLabel>Driver</relationshipLabel>
    <relationshipName>Spread_Projections_Driver</relationshipName>
    <type>Lookup</type>
</CustomField>