force-app/main/default/objects/LLC_BI__Spread_Projections_Driver__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>Administrators populate this required picklist field when creating projection templates to define the type of calculations the system performs to project statement values. Users have the ability to edit the Type field once a projection period is created.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dollar Amount Change</fullName>
            </value>
            <value>
                <fullName>Percent Amount Change</fullName>
            </value>
            <value>
                <fullName>Percent of Revenue</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
                <default>true</default>
                <label>No Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>